webook/k8s-webook-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webook
spec:
  # 副本数量
  replicas: 3
  selector:
    matchLabels:
      app: webook
  # template 描述的是pod是怎样的
  template:
    metadata:
      name: webook
      labels:
        app: webook
    # pod 的基本信息
    spec:
      containers:
        - name: webook
          image: ting17/webook:v0.0.2
          ports:
            - containerPort: 8080
