webook/k8s-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webook-redis
spec:
  selector:
    app: webook-redis
  ports:
    - protocol: TCP
      port: 6379
      # pod 暴露的端口
      targetPort: 6379
      # 外部访问的端口，必须是 30000-32767 之间的
      nodePort: 30379
  type: NodePort
