webook/k8s-webook-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webook
spec:
  type: LoadBalancer  # 把它当成一个负载均衡器. 如果不想让外部访问，则改为 ClusterIP
  selector:
    app: webook
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 8080
